--- a/login.html
+++ b/login.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
-		<title></title>
+		<meta http-equiv="content-type" content="text/html" charset="UTF-8">
+		<title>826web</title>
+		<link href="img/tab_logo.png" rel="icon">
+		<link rel="stylesheet" type="text/css" href="css/login.css" />
 	</head>
 	<body>
+		<div id="main">
+			<div id="title">
+				<font>登录</font>
+			</div>
+			<div id="login_area">
+	            <form action="#" name="frmsearch" method="get">
+	                <div id="username_box">
+	                    <input type="text" name="username" placeholder="用户名">
+	                </div>
+	                <div id="password_box">
+	                    <input type="password" name="password" placeholder="密码">
+	                </div>
+	                <div id="select_box">
+	
+	                </div>
+	                <div>
+	                    <button class="login_bn">登录</button>
+	                </div>
+	            </form>
+            <div id="login_info">
+                <font>还没有账号？</font><a href="#">立即注册！</a>
+            </div>
+        </div>
+		</div>
 	</body>
 </html>
