--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-<!--
-	作者：328288107@qq.com
-	时间：2019-08-26
-	描述：新建的index.html
-		为跑路而生
--->
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta name="awen" content="2019-8-27 专为跑路而建"/>
+		<meta http-equiv="content-type" content="text/html" charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>826web</title>
 		<link href="img/tab_logo.png" rel="icon">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
+		<div id="page">
+			<nav id="Top_header">
+				<div class="logo"><a href="#"><img src="img/tab_logo.png" width="20px" height="20px"/></a></div>
+			</nav>
+			<nav id="nav2">
+				<p>Test2</p>
+			</nav>
+			<div id="main_picture">
+				<p>Test3</p>
+			</div>
+			<div id="main">
+				<p>Test4</p>
+			</div>		
+		</div>
 	</body>
 </html>
