--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 	                </div>
 	            </form>
             <div id="login_info">
-                <font>还没有账号？</font><a href="#">立即注册！</a>
+                <p>还没有账号？<a href="#">立即注册！</a></p>
             </div>
         </div>
 		</div>
