--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<div id="page">
 			<nav id="Top_header">
 				<div class="logo"><a href="#"><img src="img/tab_logo.png" width="20px" height="20px"/></a></div>
+				<div class="header_search_bar">
+					<div class="header_search_box">
+						<form action="#" name="frmsearch" method="get">
+							<input type="text" maxlength="90" value="搜索" 
+							onfocus="this.value = '';" 
+							onblur="if (this.vallue == '') {this.value='搜索';}">
+							<input type="submit" value="">
+						</form>
+					</div>
+				</div>
 			</nav>
 			<nav id="nav2">
 				<p>Test2</p>
