--- a/index.html
+++ b/index.html
@@ -74,18 +74,205 @@
 						<h3>热门商品</h3>
 					</div>
 					<div class="hot_pic_aera">
-						<div class="hot_goods_pic">
-							<a href="#" class="hot_avatar">
-								<img src="" width="320px" height="200px" />
-							</a>
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
 						</div>
-						<div class="hot_goods_text">
-							<p>xxxxx</p>
-							<p>￥xxxx</p>
+					</div>
+					<div class="hot_pic_aera">
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
 						</div>
-						
+					</div>
+					<div class="hot_pic_aera">
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+						</div>
+					</div>
+					<div class="hot_pic_aera">
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+						</div>
+					</div>
+					<div class="hot_pic_aera">
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+						</div>
+					</div>
+					<div class="hot_pic_aera">
+						<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+							<div class="hot_goods">
+							<div class="hot_goods_pic">
+								<a href="#" class="hot_avatar">
+									<img src="" width="320px" height="200px" />
+								</a>
+							</div>
+							<div class="hot_goods_text">
+								<p>xxxxx</p>
+								<p>￥xxxx</p>
+							</div>
+						</div>
 					</div>
 				</div>
+				
 			</div>		
 		</div>
 	</body>
