--- a/index.html
+++ b/index.html
@@ -272,6 +272,60 @@
 						</div>
 					</div>
 				</div>
+				<div id="footer">
+					<div id="footer_main">
+						<div class="footer_main_classify">
+							<a>
+								<h4>购物指南 &gt;</h4>
+							</a>
+							<ul>
+								<li><a href="#">购物流程</a></li>
+								<li><a href="#">会员介绍</a></li>
+								<li><a href="#">常见问题</a></li>
+								<li><a href="#">联系客服</a></li>
+							</ul>
+						</div>
+						<div class="footer_main_classify">
+							<a href="#">
+								<h4>配送方式 &gt;</h4>
+							</a>
+							<ul>
+								<li><a href="#">上门自提</a></li>
+								<li><a href="#">配送服务查询</a></li>
+								<li><a href="#">配送收费标准</a></li>
+							</ul>
+						</div>
+						<div class="footer_main_classify">
+							<a href="#">
+								<h4>支付方式 &gt;</h4>
+							</a>
+							<ul>
+								<li><a href="#">货到付款</a></li>
+								<li><a href="#">在线支付</a></li>
+								<li><a href="#">分期付款</a></li>
+							</ul>
+						</div>
+						<div class="footer_main_classify">
+							<a href="#">
+								<h4>关于 &gt;</h4>
+							</a>
+							<ul>
+								<li><a href="#">后台管理</a></li>
+							</ul>
+						</div>
+						<div class="footer_main_classify">
+							<a href="#">
+								<h4>友情链接 &gt;</h4>
+							</a>
+							<ul>
+								<li><a href="#">Apple Store</a></li>
+								<li><a href="#">微软官方商城</a></li>
+								<li><a href="#">索尼移动</a></li>
+								<li><a href="#">三星网上商城</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 				
 			</div>		
 		</div>
