--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 						<h3>Top 20</h3>
 					</div>
 					<div id="main_top_pic"> <a class="top_avatar" href="#"></a><img src="img/Top20.png" width="1000px" height="300px" /> </div>
-					
 				</div>
 				<div id="main_hot">
 					<div id="main_hot_header">
@@ -84,7 +83,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -94,7 +94,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -117,7 +118,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -127,7 +129,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -150,7 +153,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -160,7 +164,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -183,7 +188,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -193,7 +199,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -216,7 +223,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -226,7 +234,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -249,7 +258,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
@@ -259,7 +269,8 @@
 								<p>xxxxx</p>
 								<p>￥xxxx</p>
 							</div>
-							<div class="hot_goods">
+						</div>
+						<div class="hot_goods">
 							<div class="hot_goods_pic">
 								<a href="#" class="hot_avatar">
 									<img src="" width="320px" height="200px" />
